# QuickSPI

./: CMakeLists.txt  Kconfig  LICENSE  README.md  library.json
examples/: INA239.hpp  MAX11410ATI.cpp  MAX11410ATI.hpp
include/: QuickSPI.h
src/: QuickSPI.cpp
